--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Importing the dataset from Ironhack's database"
+    "# Importing the dataset from Ironhack's database\n",
+    "pkmn = pd.read_csv(\"./Pokemon.csv\")"
    ]
   },
   {
@@ -77,11 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El df original tiene un shape de (800, 14) y el que cumple la hipótesis de (800, 14)'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "pkmn[\"Hypothesis\"]= pkmn[\"HP\"]+pkmn[\"Attack\"]+pkmn[\"Defense\"]+pkmn[\"Sp. Atk\"]+pkmn[\"Sp. Def\"]+pkmn[\"Speed\"]\n",
+    "\n",
+    "display(\"El df original tiene un shape de {} y el que cumple la hipótesis de {}\"\\\n",
+    "        .format(pkmn.shape, pkmn[pkmn[\"Total\"] ==  pkmn[\"Hypothesis\"]].shape))"
    ]
   },
   {
@@ -119,11 +133,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bug</th>\n",
+       "      <th>Dark</th>\n",
+       "      <th>Dragon</th>\n",
+       "      <th>Electric</th>\n",
+       "      <th>Fairy</th>\n",
+       "      <th>Fighting</th>\n",
+       "      <th>Fire</th>\n",
+       "      <th>Flying</th>\n",
+       "      <th>Ghost</th>\n",
+       "      <th>Grass</th>\n",
+       "      <th>Ground</th>\n",
+       "      <th>Ice</th>\n",
+       "      <th>Normal</th>\n",
+       "      <th>Poison</th>\n",
+       "      <th>Psychic</th>\n",
+       "      <th>Rock</th>\n",
+       "      <th>Steel</th>\n",
+       "      <th>Water</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Bug  Dark  Dragon  Electric  Fairy  Fighting  Fire  Flying  Ghost  Grass  \\\n",
+       "0    0     0       0         0      0         0     0       0      0      1   \n",
+       "1    0     0       0         0      0         0     0       0      0      1   \n",
+       "2    0     0       0         0      0         0     0       0      0      1   \n",
+       "3    0     0       0         0      0         0     0       0      0      1   \n",
+       "4    0     0       0         0      0         0     1       0      0      0   \n",
+       "\n",
+       "   Ground  Ice  Normal  Poison  Psychic  Rock  Steel  Water  \n",
+       "0       0    0       0       1        0     0      0      0  \n",
+       "1       0    0       0       1        0     0      0      0  \n",
+       "2       0    0       0       1        0     0      0      0  \n",
+       "3       0    0       0       1        0     0      0      0  \n",
+       "4       0    0       0       0        0     0      0      0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "pkmn_type = pd.get_dummies(pkmn[\"Type 1\"]) + pd.get_dummies(pkmn[\"Type 2\"])\n",
+    "display(pkmn_type.head())"
    ]
   },
   {
@@ -145,11 +331,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total       1.000000\n",
+       "Dragon      0.229705\n",
+       "Psychic     0.124688\n",
+       "Steel       0.109703\n",
+       "Fire        0.078726\n",
+       "Fighting    0.077786\n",
+       "Ice         0.060248\n",
+       "Flying      0.059383\n",
+       "Dark        0.056154\n",
+       "Rock        0.032731\n",
+       "Electric    0.020971\n",
+       "Ground      0.015060\n",
+       "Ghost       0.003641\n",
+       "Water      -0.021665\n",
+       "Fairy      -0.036698\n",
+       "Grass      -0.052592\n",
+       "Poison     -0.090441\n",
+       "Normal     -0.105331\n",
+       "Bug        -0.145781\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "pkmn_type[\"Total\"] = pkmn[\"Total\"]\n",
+    "\n",
+    "correl = pkmn_type.corr()[\"Total\"].sort_values(ascending = False)\n",
+    "\n",
+    "display(correl)"
    ]
   },
   {
@@ -163,12 +382,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total               1.000000\n",
+       "Dragon-Flying       0.149777\n",
+       "Dragon-Ice          0.128737\n",
+       "Dragon-Psychic      0.127066\n",
+       "Psychic-Fighting    0.104173\n",
+       "Ghost-Dragon        0.102264\n",
+       "Ground-Fire         0.098824\n",
+       "Rock-Dark           0.089736\n",
+       "Fire-Flying         0.084398\n",
+       "Rock-Fairy          0.084386\n",
+       "Water-Dragon        0.073033\n",
+       "Psychic-Dark        0.072266\n",
+       "Dragon-Electric     0.072266\n",
+       "Dragon-Fire         0.072266\n",
+       "Steel-Dragon        0.072266\n",
+       "Electric-Flying     0.067801\n",
+       "Normal-Fighting     0.064682\n",
+       "Water-Fighting      0.062210\n",
+       "Flying              0.060506\n",
+       "Ground-Flying       0.059068\n",
+       "Fire-Dragon         0.058692\n",
+       "Bug-Steel           0.058471\n",
+       "Fighting-Steel      0.058418\n",
+       "Grass-Dragon        0.057512\n",
+       "Dragon-Ground       0.057482\n",
+       "Psychic             0.054856\n",
+       "Rock-Flying         0.052859\n",
+       "Steel-Ground        0.052154\n",
+       "Electric-Dragon     0.051610\n",
+       "Fire-Water          0.048659\n",
+       "                      ...   \n",
+       "Grass-Fairy        -0.023010\n",
+       "Ice-Psychic        -0.023010\n",
+       "Ghost-Grass        -0.023651\n",
+       "Ghost-Fire         -0.023934\n",
+       "Grass-Poison       -0.024255\n",
+       "Water-Flying       -0.024374\n",
+       "Ground-Dark        -0.024446\n",
+       "Psychic-Fairy      -0.027628\n",
+       "Poison-Bug         -0.031014\n",
+       "Electric           -0.033589\n",
+       "Poison-Water       -0.033965\n",
+       "Fairy              -0.034786\n",
+       "Fire               -0.036359\n",
+       "Bug-Grass          -0.037054\n",
+       "Bug-Ground         -0.037625\n",
+       "Rock-Ground        -0.039954\n",
+       "Water-Fairy        -0.041801\n",
+       "Ground             -0.042744\n",
+       "Water-Grass        -0.045257\n",
+       "Bug-Water          -0.049015\n",
+       "Water              -0.050266\n",
+       "Fighting           -0.053630\n",
+       "Grass              -0.054546\n",
+       "Bug-Ghost          -0.058753\n",
+       "Normal             -0.064085\n",
+       "Poison             -0.064380\n",
+       "Normal-Fairy       -0.069525\n",
+       "Bug-Poison         -0.089742\n",
+       "Normal-Flying      -0.092626\n",
+       "Bug                -0.178699\n",
+       "Name: Total, Length: 155, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "aux = pkmn[[\"Type 1\", \"Type 2\"]].fillna(\"nada\")\n",
+    "\n",
+    "pkmn[\"Combo Type\"] = aux.apply(lambda x: \\\n",
+    "                                x[\"Type 1\"]+\"-\"+x[\"Type 2\"] if not x[\"Type 2\"]==\"nada\" else x[\"Type 1\"], axis = 1)\n",
+    "\n",
+    "\n",
+    "pkmn_combo = pd.get_dummies(pkmn[\"Combo Type\"])\n",
+    "pkmn_combo[\"Total\"] = pkmn[\"Total\"]\n",
+    "\n",
+    "correl_combo = pkmn_combo.corr()[\"Total\"].sort_values(ascending = False)\n",
+    "\n",
+    "display(correl_combo)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -187,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
