--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0           0     536365    85123A  2010     12    3     8   \n",
+       "1           1     536365     71053  2010     12    3     8   \n",
+       "2           2     536365    84406B  2010     12    3     8   \n",
+       "3           3     536365    84029G  2010     12    3     8   \n",
+       "4           4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0       2.55       17850  United Kingdom         15.30  \n",
+       "1       3.39       17850  United Kingdom         20.34  \n",
+       "2       2.75       17850  United Kingdom         22.00  \n",
+       "3       3.39       17850  United Kingdom         20.34  \n",
+       "4       3.39       17850  United Kingdom         20.34  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "orders = pd.read_csv(\"./Orders.csv\")\n",
+    "\n",
+    "display(orders.head())"
    ]
   },
   {
@@ -81,11 +237,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CustomerID\n",
+       "14646    280206.02\n",
+       "18102    259657.30\n",
+       "17450    194550.79\n",
+       "16446    168472.50\n",
+       "14911    143825.06\n",
+       "Name: amount_spent, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# SUB PROBLEM 1\n",
+    "best_customers = orders.groupby(\"CustomerID\")[\"amount_spent\"].sum().sort_values(ascending=False)\n",
+    "display(best_customers.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CustomerID\n",
+       "14504    673.26\n",
+       "18121    673.10\n",
+       "14628    671.96\n",
+       "17883    671.77\n",
+       "12638    671.69\n",
+       "Name: amount_spent, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# SUB PROBLEM 2\n",
+    "display(best_customers[(best_customers > best_customers.quantile(.1)) \\\n",
+    "                       & (best_customers < best_customers.quantile(.5))].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CustomerID\n",
+       "14646    280206.02\n",
+       "18102    259657.30\n",
+       "17450    194550.79\n",
+       "16446    168472.50\n",
+       "14911    143825.06\n",
+       "Name: amount_spent, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# SUB PROBLEM 3\n",
+    "# Vamos a otorgar el 2 a los VIP, el 1 a los Preferred y el 0 a los demás.\n",
+    "\n",
+    "customers = pd.DataFrame()\n",
+    "customers[\"amount_spent\"] = best_customers\n",
+    "customers[\"customersLabel\"] = customers[\"amount_spent\"].apply(lambda x: 2 if x > best_customers.quantile(.95)\\\n",
+    "                                                              else 1 if x > best_customers.quantile(.75) else 0)\n",
+    "\n",
+    "display(best_customers.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3254\n",
+       "1     868\n",
+       "2     217\n",
+       "Name: customersLabel, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(customers[\"customersLabel\"].value_counts())"
    ]
   },
   {
@@ -99,11 +355,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4347, 4)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>customersLabel</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>211225</th>\n",
+       "      <td>12455</td>\n",
+       "      <td>2466.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cyprus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211267</th>\n",
+       "      <td>12455</td>\n",
+       "      <td>2466.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Spain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CustomerID  amount_spent  customersLabel Country\n",
+       "211225       12455       2466.86               1  Cyprus\n",
+       "211267       12455       2466.86               1   Spain"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "country_df = customers.merge(orders[[\"CustomerID\", \"Country\"]], left_on=\"CustomerID\", right_on=\"CustomerID\",\\\n",
+    "                             how= \"left\").drop_duplicates()\n",
+    "display(country_df.shape)\n",
+    "display(country_df[country_df[\"CustomerID\"]==12455])\n",
+    "\n",
+    "# Hay países con más de un país"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom    177\n",
+       "Name: customersLabel, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# display(country_df.groupby(\"Country\").sum())\n",
+    "\n",
+    "display(country_df[country_df[\"customersLabel\"] == 2].groupby(\"Country\")[\"customersLabel\"].count()\\\n",
+    "        .sort_values(ascending=False).head(1))"
    ]
   },
   {
@@ -115,11 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom    932\n",
+       "Name: customersLabel, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "display(country_df[(country_df[\"customersLabel\"] == 2) | (country_df[\"customersLabel\"] == 1)]\\\n",
+    "        .groupby(\"Country\")[\"customersLabel\"].count().sort_values(ascending=False).head(1))"
    ]
   }
  ],
