Total is equal to the sum of values

--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
@@ -220,11 +220,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True    800\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here \n",
+    "\n",
+    "pokemon[\"suma_var\"] = pokemon[\"HP\"] + pokemon[\"Attack\"] + pokemon[\"Defense\"] + pokemon[\"Sp. Atk\"]+ pokemon[\"Sp. Def\"] + pokemon[\"Speed\"]\n",
+    "\n",
+    "\n",
+    "check_hypo = pokemon[\"suma_var\"] == pokemon[\"Total\"]\n",
+    "check_hypo.value_counts()\n",
+    "#pokemon.equals([\"suma_var\"],[\"Total\"])"
    ]
   },
   {
